infrastructure-base/base/ingress-external/ingress-external.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-external
  namespace: ingress-nginx
  labels:
    app: ingress-nginx-external
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
  - host: mdtu-gpt-dev.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: auto-evaluator-api
            port:
              number: 8000
        path: /test
        pathType: Prefix
  - host: www.mdtu-gpt-dev.westeurope.cloudapp.azure.com
    http:
      paths:
      - backend:
          service:
            name: auto-evaluator-api
            port:
              number: 8000
        path: /test
        pathType: Prefix
